# gymsql

./: .dockerignore  .env  .env.dev.template  .env.docker  .env.example  .env.prod.template  .env.secure  .env.uat.template  .gcloudignore  .gitignore  .replit  .vercelignore  BUG_FIX_PROBLEMS_SOLVED.md  CICD_SETUP.md  CLOUD_RUN_BUILD_FIX.md  CLOUD_RUN_DEPLOYMENT.md  CLOUD_RUN_FIXES.md  CNAME  CREATE_BRANCHES.md  DATABASE_SCHEMA.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_GUIDE.md  DEPLOY_FIXED.md  DOCKER_BUILD_FIX_v2.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.cloudrun  Dockerfile.dev  Dockerfile.frontend  Dockerfile.prod  Dockerfile.uat  ENVIRONMENT_CONFIGURATION.md  FINAL_DOCKER_FIX.md  GCLOUD_IGNORE_FIX.md  GITHUB_ACTIONS_SETUP.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_SECURITY_GUIDE.md  Procfile  QUICK_DEPLOY.md  (+41 more)
api/: admin_routes.py  admin_session.py  audit_logger.py  auth.py  background_sync.py  chat_routes.py  config.py  data_retention.py  database.py  duckdb_sandbox.py  email_service.py  file_processor.py  gemini_hint.py  main.py  message_persistence.py  models.py  oauth_config.py  oauth_routes.py  problem_queue_routes.py  query_validator.py  rate_limiter.py  redis_config.py  redis_fallback.py  redis_service.py  redis_test_routes.py  redis_worker.py  s3_service.py  sandbox_manager.py  sandbox_routes.py  scheduler.py  schemas.py  secure_execution.py  secure_execution_original.py  security_middleware.py  seed.py  test_validator.py  user_routes.py
client/: index.html
data-engineering/: DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  (+11 more)
(+130 files in other folders)
